Add integration test for JDK 25 LinkageError with Lombok (#1109)
Verifies that the rewrite plugin can parse JDK 25 projects using Lombok
on comment-free main sources with commented test sources, which previously
triggered a LinkageError in JavaUnrestrictedClassLoader.defineClass().

Co-authored-by: Tim te Beek <tim@mac.home>
Co-authored-by: Claude Opus 4.6 <noreply@anthropic.com>